AP-2008-07-21-0: Bugfix:     Changed the names of upgrade sctipts.
                 Review:     LP

AH-2008-07-21-0: Enhancem.:  Added -masterq without slave specification to
                             bugs/issuezilla/2378
                 Review:     JG

JG-2008-07-21-1: Bugfix:     Fixed system_tests/qmaster/reporting.
                 Review:     DG

JG-2008-07-21-0: Bugfix:     Fixed system_tests/clients/qalter.
                 Review:     DG

AP-2008-07-17-0: Bugfix:     Added missing messages to upgrade test.
                 Review:     JO

DG-2008-07-16-0: Cleanup:    Java DRMAA test issues with loading 32 bit libraries on
                             some architectures.
                 Belongs to: DG-2008-05-14-0
                 Review:     CR

HP-2008-07-16-0: Bugfix:     Added AIX51 to the architectures that use "id", not "id -a"
                 Changed:    system_tests/clients/qrsh/check.exp
                 Review:     CR

HP-2008-07-15-0: Bugfix:     Timing issues in the qrsh_notify test wrongly produced errors
                 Changed:    system_tests/clients/qrsh/check.exp
                 Review:     JG

CR-2008-07-15-1: Cleanup:    Updated set suppressArchCheck=true in testsuite_build.properties
                             to set suppress.arch.check=true
                 Belongs To: CR-2008-07-15-0

CR-2008-07-15-0: Bugfix:     Testsuite test "executor_reload" not working with distribution build
                 Issue:      454 (hedeby)
                 Enhancem.:  set suppressArchCheck=true in testsuite_build.properties
                 Review:     AA

MG-2008-07-14-0: Enhancem.:  Testsuite wil not try to install Service Tags with SDM
                 Belongs To: MG-2008-07-14-0
                 Review:     RM

CR-2008-07-11-0: Bugfix:     correct exp. gdi_retries count in check 2372
                 Belongs To: CR-2008-07-10-0
                 Review:     MD

JG-2008-07-11-0: Bugfix:    Fixed qalter_iz_2575 test with maintrunk.